# TerpTracker

./: .gitignore  CLAUDE.md  IDEAS.md  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2025_11_11_1404-8fe68fa46d2c_initial_migration_create_tables.py
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  constants.py  middleware.py
backend/app/data/: __init__.py  init_datasets.py
backend/app/db/: models.py
backend/app/models/: schemas.py
backend/app/services/: analyzer.py  cache.py  cannlytics_client.py  classifier.py  effects_engine.py  kushy_client.py  otreeba_client.py  profile_cache.py  scraper.py
backend/app/utils/: conversions.py  matching.py  merging.py  normalization.py
backend/tests/: conftest.py  test_analyzer.py  test_cannabinoid_insights.py  test_classifier.py  test_effects_engine.py  test_init_datasets.py  test_matching.py  test_merging.py  test_normalization.py  test_profile_cache.py  test_routes.py  test_search.py
backend/tests/fixtures/: cannlytics_json_results.csv  cannlytics_product_name.csv  cannlytics_sample.csv  openthc_sample.json  phytochem_sample.csv
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/__tests__/: sdp-categories.test.ts  types.test.ts  utils.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AnalyzeForm.tsx  NavBar.tsx  (+12 more)
(+6 files in other folders)
