[project]
name = "terptracker-backend"
version = "0.1.0"
description = "Cannabis terpene profile analyzer - FastAPI backend"
requires-python = ">=3.10"
dependencies = [
    # FastAPI and web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    # Database
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    # Redis
    "redis>=5.0.1",
    "hiredis>=2.3.2",
    # Web scraping
    "playwright>=1.41.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    # HTTP client
    "httpx>=0.26.0",
    # Fuzzy matching
    "rapidfuzz>=3.6.1",
    # Data processing
    "pandas>=2.0.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    # Linting and formatting
    "black>=23.12.1",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.black]
line-length = 120
